[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "casinoeventfabrique"
version = "0.1.0"
description = "CasinoEventFabrique project"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Hidde van Heijst", email = "your-email@example.com"},
]
dependencies = [
    "azure-eventhub>=5.11.0",
    "azure-identity>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.1",
]
adx = [
    "azure-kusto-data>=4.2.0",
]

[project.scripts]
casinoeventfabrique-casino = "casinoeventfabrique.casino_cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"